--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="submit">提交</string>
     <string name="addCourse">添加里程</string>
     <string name="text_Cancel">取消</string>
+    <string name="text_takingPictures">拍照</string>
+    <string name="text_selectPphotoAlbum">从相册中选取</string>
 </resources>
