--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,11 +42,23 @@
     <string name="params_error">对不起，请检查数据是否正确</string>
     <string name="submit_error">对不起，提交异常</string>
     <string name="submit_ok">提交完成</string>
+    <string name="chargeInfo">请输入评论内容</string>
+    <string name="charge">评论</string>
+    <string name="publishLesson">发布课程</string>
+    <string name="coachInfo">教练资料</string>
+    <string name="add_publishLesson">添加</string>
 
     <string-array name="tab_names">
         <item>全部</item>
         <item>待付款</item>
         <item>已退款</item>
         <item>待评价</item>
+    </string-array>
+    <string-array name="items_nearby">
+        <item>智能排序</item>
+        <item>离我最近</item>
+        <item>人气最高</item>
+        <item>评价最好</item>
+        <item>价格最低</item>
     </string-array>
 </resources>
